# app/Http/Controllers/Rest/V1/ProductoController.php
@@ -32,7 +32,7 @@ class ProductoController extends Controller
 
     /**
     * @OA\Get(
-    *     path="/rest/v1/productos",
+    *     path="/rest/v1/productos/{producto}",
     *     tags={"productos"},
     *     summary="Buscar un producto mediante un ID",
     *     description="Retorna el producto con la ID ingresada",
